@startuml

title __CLIENT's Class Diagram__\n

  namespace sample {
    class sample.Client {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.FileTransfer {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  sample.Client o-- sample.Controller : controller
  sample.Controller o-- sample.Client : client
  sample.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
